add who made it

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<h5 class="text-center mmfont">
 					Developer/Designer အလုပ်တွေရှာဖွေဖို့ <a href="https://www.myanmardevjobs.com/?ref=devcon">myanmardevjobs.com</a>
 				</h1>
-				<p class="text-center">Made with ❤️ in Yangon. I get the schedule data from from <a href="http://www.devconmyanmar.org">www.devconmyanmar.org</a></p>
+				<p class="text-center">Made with ❤️ in Yangon by <a href="https://www.myanmardevjobs.com/?ref=devcon">MyanamrDevJobs</a>. I get the schedule data from from <a href="http://www.devconmyanmar.org">www.devconmyanmar.org</a></p>
 			</div>
 		</div>
 	</div>
