--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="DevConYangon">
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="/devcon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/devcon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/devcon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/devcon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/devcon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/devcon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/devcon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/devcon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/devcon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/devcon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/devcon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/devcon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/devcon/favicon-16x16.png">
+	<link rel="manifest" href="/devcon/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
