--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					  <input type="search" class="search form-control col-md-12" placeholder="Search by Topics" />
 					</div>
 
-					<table class="table table-striped">
+					<table class="table table-responsive table-striped">
 						<!-- IMPORTANT, class="list" have to be at tbody -->
 						<thead class="thead-dark">
 							<tr>
