remove extra row

--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
 						</thead>
 						<tbody class="list">
 							<tr>
-								<td class="time" scope="row">9:00-09:45</td>
-								<td class="conference" colspan="3">Opening Ceremony (Conference Hall)</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
 								<td class="time">9:00-09:45</td>
 								<td class="conference" colspan="3">Opening Ceremony (Conference Hall)</td>
 								<td class="date">Sat</td>
@@ -101,7 +96,7 @@
 								<td class="time">3:25:-04:10</td>
 								<td class="conference">Ye Thura Thet "Threat modelling mobile applications"</td>
 								<td class="205">Aye Kyaw Hlaing "Blockchain - will it be the next Internet?"</td>
-								<td class="203">Sai Tin Min Lu "What I learn from a journey of Technician to Entrepreneur</td>
+								<td class="203">Sai Tin Min Lu "What I learn from a journey of Technician to Entrepreneur"</td>
 								<td class="date">Sat</td>
 							</tr>
 							<tr>
