--- a/index.html
+++ b/index.html
@@ -79,28 +79,26 @@
 								<td class="date">Sat</td>
 							</tr>
 							<tr>
-								<td class="time">1:00:-02:30</td>
+								<td class="time">1:00-02:30</td>
+								<td class="conference mmfont" colspan="3">(နည်းပညာအပြောင်းအလဲနှင့် အချိုးအကွေ့များ) U Ravi, U Htoo Myint Naung, U Thar Htet (Moderator - U Thaung Su Nyein)</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr>
+								<td class="time">2:35-03:20</td>
 								<td class="conference">Ei Maung "React & Redux: Fundamental Concepts"</td>
 								<td class="205">Phyo Pyae "Build a Cloud Application with AWS from scratch (Live Coding)"</td>
 								<td class="203">Pyi Soe Maw "How to be an ICT Professionals!"</td>
 								<td class="date">Sat</td>
 							</tr>
 							<tr>
-								<td class="time">2:35:-03:20</td>
-								<td class="conference">Ei Maung "React & Redux: Fundamental Concepts"</td>
-								<td class="205">Phyo Pyae "Build a Cloud Application with AWS from scratch (Live Coding)"</td>
-								<td class="203">Pyi Soe Maw "How to be an ICT Professionals!"</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">3:25:-04:10</td>
+								<td class="time">3:35-04:10</td>
 								<td class="conference">Ye Thura Thet "Threat modelling mobile applications"</td>
 								<td class="205">Aye Kyaw Hlaing "Blockchain - will it be the next Internet?"</td>
 								<td class="203">Sai Tin Min Lu "What I learn from a journey of Technician to Entrepreneur"</td>
 								<td class="date">Sat</td>
 							</tr>
 							<tr>
-								<td class="time">4:15:-05:00</td>
+								<td class="time">4:15-05:00</td>
 								<td class="conference">Thar Htet "Code less"</td>
 								<td class="205">Ko Ko Ye + 1 "IoT with Juju and Kubernetes"</td>
 								<td class="203">Swan Htet Aung "How I bootstrapped a profitable Micro SaaS startup"</td>
@@ -117,7 +115,7 @@
 							</tr>
 
 							<tr>
-								<td class="time">10:20:-11:05</td>
+								<td class="time">10:20-11:05</td>
 								<td class="conference">Htoo Myint Naung "Buses you don't know"</td>
 								<td class="205">Zeyar Wint "Programmer to Software Engineer"</td>
 								<td class="203">Swan Thu "Game Development and animation Basic"</td>
@@ -125,7 +123,7 @@
 							</tr>
 
 							<tr>
-								<td class="time">11:10:-12:00</td>
+								<td class="time">11:10-12:00</td>
 								<td class="conference">Thandar Phru "Database Management with ArcGIS"</td>
 								<td class="205">Aung Soe Moe "Beyond the rich of information"</td>
 								<td class="203">Thura Myo Nyunt "Nodejs Tips and Tricks"</td>
@@ -139,7 +137,7 @@
 							</tr>
 
 							<tr>
-								<td class="time">1:00:-01:45</td>
+								<td class="time">1:00-01:45</td>
 								<td class="conference">Aung Pyae Phyo "End to End Process in making a (digital) Solution"</td>
 								<td class="205">Khant Naing Set "Designing a Microservices"</td>
 								<td class="203">Kyi Thet Han "Competitive career development"</td>
@@ -147,7 +145,7 @@
 							</tr>
 
 							<tr>
-								<td class="time">01:50:-02:35</td>
+								<td class="time">01:50-02:35</td>
 								<td class="conference">Myat Min Soe "Now you see Kotlin"</td>
 								<td class="205">Moe Hein Kyaw + Phone Pyae Oo "Functional Reactive Programming using RxJs(Beyonds callbacks and Promise)</td>
 								<td class="203"></td>
@@ -155,7 +153,7 @@
 							</tr>
 
 							<tr>
-								<td class="time">02:40:-03:25</td>
+								<td class="time">02:40-03:25</td>
 								<td class="conference">Nyein Oo "Do's and Don't at your work place "Professional Focus""</td>
 								<td class="205">Aung Kyaw Paing "The Do's and Don't of Android"</td>
 								<td class="203">Khin Sandar "Project development experiences with VR cardboard and 360 photo experience of Myanmar Culture Heritage App"</td>
