made schedule more readable

--- a/index.html
+++ b/index.html
@@ -58,53 +58,6 @@
 							</tr>
 						</thead>
 						<tbody class="list">
-							<tr>
-								<td class="time">9:00-09:45</td>
-								<td class="conference" colspan="3">Opening Ceremony (Conference Hall)</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">10:00-11:00</td>
-								<td class="conference" colspan="3">Panel Discussion</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">11:15-12:00</td>
-								<td class="conference" colspan="3">Essential Soft Skills for IT professionals (Dr. Aung Tun Thet)</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">12:00-01:00</td>
-								<td class="conference" colspan="3">Lunch</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">1:00-02:30</td>
-								<td class="conference mmfont" colspan="3">(နည်းပညာအပြောင်းအလဲနှင့် အချိုးအကွေ့များ) U Ravi, U Htoo Myint Naung, U Thar Htet (Moderator - U Thaung Su Nyein)</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">2:35-03:20</td>
-								<td class="conference">Ei Maung "React & Redux: Fundamental Concepts"</td>
-								<td class="205">Phyo Pyae "Build a Cloud Application with AWS from scratch (Live Coding)"</td>
-								<td class="203">Pyi Soe Maw "How to be an ICT Professionals!"</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">3:35-04:10</td>
-								<td class="conference">Ye Thura Thet "Threat modelling mobile applications"</td>
-								<td class="205">Aye Kyaw Hlaing "Blockchain - will it be the next Internet?"</td>
-								<td class="203">Sai Tin Min Lu "What I learn from a journey of Technician to Entrepreneur"</td>
-								<td class="date">Sat</td>
-							</tr>
-							<tr>
-								<td class="time">4:15-05:00</td>
-								<td class="conference">Thar Htet "Code less"</td>
-								<td class="205">Ko Ko Ye + 1 "IoT with Juju and Kubernetes"</td>
-								<td class="203">Swan Htet Aung "How I bootstrapped a profitable Micro SaaS startup"</td>
-								<td class="date">Sat</td>
-							</tr>
-
 							<!-- Sunday -->
 							<tr>
 								<td class="time">9:30:-10:15</td>
@@ -164,6 +117,53 @@
 								<td class="time">03:30-05:00</td>
 								<td class="conference" colspan="3">Townhall Meeting & Lucky draw (Conference Hall)</td>
 								<td class="date">Sun</td>
+							</tr>
+
+							<tr class="opacity: 0.5;">
+								<td class="time">9:00-09:45</td>
+								<td class="conference" colspan="3">Opening Ceremony (Conference Hall)</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">10:00-11:00</td>
+								<td class="conference" colspan="3">Panel Discussion</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">11:15-12:00</td>
+								<td class="conference" colspan="3">Essential Soft Skills for IT professionals (Dr. Aung Tun Thet)</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr>
+								<td class="time">12:00-01:00</td>
+								<td class="conference" colspan="3">Lunch</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">1:00-02:30</td>
+								<td class="conference mmfont" colspan="3">(နည်းပညာအပြောင်းအလဲနှင့် အချိုးအကွေ့များ) U Ravi, U Htoo Myint Naung, U Thar Htet (Moderator - U Thaung Su Nyein)</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">2:35-03:20</td>
+								<td class="conference">Ei Maung "React & Redux: Fundamental Concepts"</td>
+								<td class="205">Phyo Pyae "Build a Cloud Application with AWS from scratch (Live Coding)"</td>
+								<td class="203">Pyi Soe Maw "How to be an ICT Professionals!"</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">3:35-04:10</td>
+								<td class="conference">Ye Thura Thet "Threat modelling mobile applications"</td>
+								<td class="205">Aye Kyaw Hlaing "Blockchain - will it be the next Internet?"</td>
+								<td class="203">Sai Tin Min Lu "What I learn from a journey of Technician to Entrepreneur"</td>
+								<td class="date">Sat</td>
+							</tr>
+							<tr class="opacity: 0.5;">
+								<td class="time">4:15-05:00</td>
+								<td class="conference">Thar Htet "Code less"</td>
+								<td class="205">Ko Ko Ye + 1 "IoT with Juju and Kubernetes"</td>
+								<td class="203">Swan Htet Aung "How I bootstrapped a profitable Micro SaaS startup"</td>
+								<td class="date">Sat</td>
 							</tr>
 						</tbody>
 					</table>
